# 6-D.O.F.-robotic-manipulator

./: CMakeLists.txt  README.md  package.xml
config/: control.yaml  joint_names_mat150621.yaml
launch/: display.launch  gazebo.launch  test_description.launch  test_gazebo.launch  test_robocon.launch
meshes/: base_link.STL  gripper_1.STL  gripper_2.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL  link_6.STL
urdf/: mat150621.csv  mat150621.urdf
